---
config:
  class:
    hideEmptyMembersBox: true
  layout: elk
  theme: neo
  look: neo
---

classDiagram
direction TB
  Program ..> ServiceCollectionExtensions
  
  %% App Services
  ServiceCollectionExtensions ..> IServiceCollection
  ServiceCollectionExtensions ..> ServiceCollection
  ServiceCollectionExtensions ..> ActionInfoFactory : uses to create instance
  ServiceCollectionExtensions ..> ActionInfo : adds to service container
  ServiceCollectionExtensions ..> IActionInfo : maps to concrete
  ServiceCollectionExtensions ..> GitHubApiCallerFactory : uses to create instance
  ServiceCollectionExtensions ..> GitHubApiCaller : adds to service container
  ServiceCollectionExtensions ..> IGitHubApiCaller : maps to concrete
  ServiceCollectionExtensions ..> Git : adds to service container
  ServiceCollectionExtensions ..> IGit : maps to concrete
  ServiceCollectionExtensions ..> CommentBuilder : adds to service container
  ServiceCollectionExtensions ..> ICommentBuilder : maps to concrete
  ServiceCollectionExtensions ..> IOptions~ActionOptions~ : adds to service container
  
  %% IActionInfoFactory
  IActionInfoFactory ..> IActionInfo : creates

  %% ActionInfoFactory
  ActionInfoFactory ..|> IActionInfoFactory : implements
  ActionInfoFactory ..> ActionInfo : creates
  ActionInfoFactory ..> EventInfo : creates
  ActionInfoFactory ..> RepoInfo : creates
  ActionInfoFactory ..> PrInfo : creates
  
  %% ActionOptions
  ActionOptions ..|> IActionOptions : implements
  IOptions~ActionOptions~ ..> ActionOptions

  %% CommentBuilder
  CommentBuilder ..|> ICommentBuilder : implements
  CommentBuilder ..> IActionInfo : consumes
  CommentBuilder ..> IGitHubApiCaller : consumes

  %% GitHubApiCallerFactory
  GitHubApiCallerFactory ..|> IGitHubApiCallerFactory : implements
  IGitHubApiCallerFactory ..> IGitHubApiCaller : creates
  GitHubApiCallerFactory ..> GitHubApiCaller : creates
  
  %% GitHubApiCaller
  GitHubApiCaller ..|> IGitHubApiCaller : implements
  GitHubApiCaller ..> Octokit

  %% ActionInfo
  ActionInfo ..|> IActionInfo : implements
  IActionInfo --* IEventInfo: owns
  IActionInfo --* IRepoInfo : owns
  IActionInfo --* IPrInfo : owns
  
  %% Git
  Git ..|> IGit : implements
  Git ..> ProcessOutFactory : uses to create instance
  
  
  ProcessOut ..|> IProcessOut : implements
  ProcessOutFactory ..|> IProcessOutFactory : implements
  ProcessOutFactory ..> ProcessOut : creates
  
  PrInfo ..|> IPrInfo : implements
  RepoInfo ..|> IRepoInfo : implements
  EventInfo ..|> IEventInfo : implements

  namespace Core {
    namespace CommentBuilder {
      class ICommentBuilder {
        +Task~string~ BuildAsync
      }
    }
    
    namespace Git {
      class IGit {
        +Task CloneRepoAsync(string cloneUrl, string workingDir)
        +Task<string> Log(string exclude, string baseSha, string headSha, string workingDir)
        +Task<string> GetMergeBaseSha(string baseSha, string headSha, string workingDir)
        +Task<uint> GetAmountOfParents(string sha, string workingDir)
      }
      
      class IProcessOut {
        +int ExitCode
        +string StdOut
        +string StdErr
      }
      
      class IProcessOutFactory {
        +IProcessOut Create(int exitCode, string stdOut, string stdErr)
      }
    }
    
    namespace ActionInfo {
      class IActionInfoFactory {
        +IActionInfo Create()$
      }
      
      class IActionInfo {
        +IEventInfo EventInfo
        +IRepoInfo RepoInfo
        +IPrInfo PrInfo
      }
      
      class IPrInfo {
        +string BaseRef
        +string BaseSha
        +string HeadRef
        +string HeadSha
        +string HeadLabel
        +string HeadOwner
        +string HeadRepo
        +string MergeBaseSha
        +uint MergeBaseParentsCount
        +string PrNodeId
        +string BaseNodeId
        +string HeadNodeId
        +uint IssueNumber 
      }
      
      class IRepoInfo {
        +string Name
        +string Owner
        +string CloneUrl
      }
      
      class IActionOptions {
        +boolean IsAutoMerge
        +string PostComment
        +string Command
      }
      
      class IEventInfo {
        +boolean IsShouldExit
        +string CommentBody
        +boolean IsCommandInvoked
        +ActionEventType EventType
        +ActionEvent Event
        +string User
        +boolean GetUserHasPerms(IRepoInfo repoInfo)
        +boolean GetIsPossible(IRepoInfo repoInfo)
      }
    }
    
    namespace GitHubApiCaller {
      class IGitHubApiCaller {
        +Task~PullRequest~ GetPullRequest(string owner, string name, uint prNumber)
        +Task~CompareResult~ GetBaseHeadComparison(string owner, string name, string baseSha, string headLabel)
        +Task~bool~ IsCollaborator(string owner, string name, string user)
        +Task~IssueComment~ PostComment(string owner, string name, uint issueNumber, string comment)
        +Task~GitHubCommit~ GetCommit(string owner, string name, string sha)
        +Task~Reference~ FastForward(string owner, string name, string baseLabel, string headSha)
      }
      
      class IGitHubApiCallerFactory {
        +IGitHubApiCaller Create()$
      }
    }
  }
  
  namespace Implements {
    namespace External {
      class ServiceCollection { }
      class IServiceCollection { }
      class IOptions~ActionOptions~ { }
      class Octokit { }
    }
    
    namespace CommentBuilder {
      class CommentBuilder {
        -IActionInfo _actionInfo
        -IGitHubApiCaller _gitHubApiCaller
        -string _baseFullRef
        -string _headFullRef
        -List~string~ _comment
      }
    }
    
    namespace Git {
      class Git {
        -string RunProcessAsync(string fileName, IEnumerable~string~ args, string workingDir)
        -void DeleteRecursive(string path)
      }
      
      class ProcessOut {
        ~ProcessOut(int exitCode, string stdOut, string stdErr)
      }
      
      class ProcessOutFactory {}
    }
   
    namespace ActionInfo {
      class ActionInfoFactory {
        -EventInfo createEventInfo()
        -RepoInfo createRepoInfo()
        -PrInfo createPrInfo()
      }
      
      class ActionInfo {
        ~ActionInfo(IGitHubApiCaller gitHubApiCaller, IEventInfo eventInfo, IRepoInfo repoInfo, IPrInfo)
      }
      
      class PrInfo {
        ~PrInfo(ActionEvent event)
      }
      
      class RepoInfo {
        ~RepoInfo(ActionEvent event)
      }
      
      class ActionOptions {
        -ActionOptions()
      }
      
      class EventInfo {
        ~EventInfo(ActionEvent event)
      }
    }
    
    namespace GitHubApiCaller {
      class GitHubApiCaller {
        ~GitHubApiCaller(IGitHubClient octokit)
      }
      
      class GitHubApiCallerFactory {
        ~GitHubApiCallerFactory(HttpClient httpClient)
        +IGitHubApiCaller Create()
        -string GetOidcToken()
        -string GetInstallationToken(string oidcToken)
      }
    }
    
    class ServiceCollectionExtensions {
      -IServiceCollection AddGitHubApiCaller()$
      +IServiceCollection AddAppServices()$
    }
  }
  
  namespace Interface {
    class Program { }
  }